change readme file

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,14 @@
+<h1>Dashboard Component</h1>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, molestiae nihil repellendus asperiores rerum
+    architecto veniam quos non eum. Hic deserunt voluptas, dolor suscipit neque molestiae exercitationem culpa a!.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim error veritatis dolore! Dolorem, explicabo sint.
+    Laborum fuga nihil deleniti, recusandae explicabo, maxime voluptatibus ex eaque dolorum asperiores voluptates
+    pariatur voluptatum!
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam delectus facilis dignissimos quod dolorum quidem a
+    fuga voluptatibus quasi earum maxime vero illo assumenda voluptas praesentium, at tempora animi ex.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus provident commodi totam in minus illum eaque quod
+    nemo delectus similique? Exercitationem qui animi facilis eum eveniet sunt inventore amet fugit.
+</p>
 <!-- <ngx-doc-viewer [url]="'http://www.africau.edu/images/default/sample.pdf'" viewer="google" style="width:100%;height:100vh;"></ngx-doc-viewer> -->
-<ngx-extended-pdf-viewer [src]="'http://www.africau.edu/images/default/sample.pdf'" useBrowserLocale="true" height="80vh"></ngx-extended-pdf-viewer>
+<!-- <ngx-extended-pdf-viewer [src]="'http://www.africau.edu/images/default/sample.pdf'" useBrowserLocale="true" height="80vh"></ngx-extended-pdf-viewer> -->
